# Seance

./: .gitignore  App.tsx  app.json  index.html  metro.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.web.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/editor/: EditorToolbar.tsx  MarkdownEditor.tsx  editorTheme.ts  markdownDecorations.ts
src/components/settings/: SettingsModal.tsx
src/components/sidebar/: AppSidebar.tsx  FileTree.tsx
src/context/: FileTreeContext.tsx  SettingsContext.tsx
src/hooks/: useAutoSave.ts  useKeyboardShortcuts.ts
src/shims/: react-native-svg.tsx
